--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <td class="quadrado" onclick="jogar(this)"></td>
             </tr>
         </table>
-        <button class="btn-reset" onclick="reiniciar()">Reiniciar</button>
+        <button class="btn-reset" onclick="reiniciar()">Reload</button>
     </div>
 
 
